--- a/app/src/main/res/layout/menu_product_item_layout.xml
+++ b/app/src/main/res/layout/menu_product_item_layout.xml
@@ -59,7 +59,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="5dp"
                 android:text="@string/qty"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:visibility="invisible"/>
 
         </LinearLayout>
         <RelativeLayout
