--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,6 +13,13 @@
         tools:layout="@layout/fragment_settings" />
 
     <fragment
+        android:id="@+id/nav_report"
+        android:name="com.kamilamalikova.help.ui.report.OrderReportFragment"
+        android:label="@string/report"
+        tools:layout="@layout/fragment_order_report" />
+
+
+    <fragment
         android:id="@+id/nav_products"
         android:name="com.kamilamalikova.help.ui.products.ProductsFragment"
         android:label="@string/menu_products"
