--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -10,6 +10,11 @@
             android:title="@string/menu_terminal" />
 
         <item
+            android:id="@+id/nav_products"
+            android:icon="@android:drawable/ic_dialog_dialer"
+            android:title="@string/menu_products" />
+
+        <item
             android:id="@+id/nav_stock"
             android:icon="@drawable/ic_product"
             android:title="@string/menu_stock" />
@@ -20,13 +25,13 @@
             android:title="@string/in_out" />
 
         <item
-            android:id="@+id/nav_products"
-            android:icon="@android:drawable/ic_dialog_dialer"
-            android:title="@string/menu_products" />
+            android:id="@+id/nav_report"
+            android:icon="@drawable/ic_baseline_assessment_24"
+            android:title="@string/report" />
         <item
-            android:id="@+id/nav_settings"
-            android:icon="@drawable/ic_baseline_settings_24"
-            android:title="@string/menu_settings" />
+            android:id="@+id/nav_order_history"
+            android:icon="@drawable/ic_baseline_history_24"
+            android:title="@string/order_history" />
 
         <item
             android:id="@+id/nav_users"
@@ -34,9 +39,14 @@
             android:title="@string/users" />
 
         <item
-            android:id="@+id/nav_report"
-            android:icon="@drawable/ic_baseline_assessment_24"
-            android:title="@string/report" />
+            android:id="@+id/nav_settings"
+            android:icon="@drawable/ic_baseline_settings_24"
+            android:title="@string/menu_settings" />
+
+        <item
+            android:id="@+id/logOutBtn"
+            android:icon="@drawable/ic_baseline_exit_to_app_24"
+            android:title="@string/logout" />
 
     </group>
 </menu>
