--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -140,4 +140,10 @@
         android:label="@string/users"
         tools:layout="@layout/fragment_user" />
 
+    <fragment
+        android:id="@+id/nav_order_history"
+        android:name="com.kamilamalikova.help.ui.history.OrdersHistoryFragment"
+        android:label="@string/order_history"
+        tools:layout="@layout/fragment_orders_history" />
+
 </navigation>
